--- a/jai-sketches/pom.xml
+++ b/jai-sketches/pom.xml
@@ -10,6 +10,7 @@
 
 	<modules>
 		<module>jsk-santos-tutorial</module>
+		<module>jsk-vecty</module>
 	</modules>
 
 	<scm>
@@ -88,6 +89,31 @@
 				<artifactId>jai-codec</artifactId>
 				<version>1.1.3</version>
 			</dependency>
+			<dependency>
+				<groupId>org.jaitools</groupId>
+				<artifactId>jt-vectorize</artifactId>
+				<version>1.4-SNAPSHOT</version>
+			</dependency>
+			<dependency>
+				<groupId>org.jaitools</groupId>
+				<artifactId>jt-regionalize</artifactId>
+				<version>1.4-SNAPSHOT</version>
+			</dependency>
+
+			<!-- SVG renderer -->
+			<!-- Yes, I'm importing all the geoserver module just to use few classes related to the SVG renderer -->
+			<dependency>
+				<groupId>org.geoserver</groupId>
+				<artifactId>gs-wms</artifactId>
+				<version>2.8-SNAPSHOT</version>
+			</dependency>
+			<!-- And also all the gt-main module to use the DataUtilities class! -->
+			<dependency>
+				<groupId>org.geotools</groupId>
+				<artifactId>gt-main</artifactId>
+				<version>14-SNAPSHOT</version>
+			</dependency>
+
 
 			<!-- test stuff -->
 			<dependency>
